# stella-engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.save  COPYING  README.md  TODO.md  appveyor.yml  cppcheck.xml  create.py  create_class.sh  debuginfo.txt  game.cpp  grep  helper.sh  run.sh  setup.sh  stella.py  stella.sh  vendor.yml
dependencies/: CMakeLists.txt
dependencies/freealut/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/src/: glad.c
dependencies/openal-soft/: CMakeLists.txt
dependencies/soil/: CMakeLists.txt
example/: CMakeLists.txt  config.json  main.cpp
example/assets/shaders/: world2d.fs
example/common/include/: firelayer.h  scenelayer.h
example/scripts/: main.lua
example/torch/: game.cpp  game.h  main.cpp
example/torch/scripts/: Map.lua  ProceduralMap.lua  entity.lua  load_game.lua  main.lua  states.lua  stella.lua
example/torch/systems/: animation_system.cpp  animation_system.h  collision_system.cpp  game_systems.h  gui_rendering_system.cpp  gui_rendering_system.h  particle_system.cpp  physics_system.cpp  physics_system.h  player_movement_system.cpp  scene_rendering_system.cpp  scene_rendering_system.h  simple_movement.cpp  tileview_system.cpp  torch_system.cpp  torch_system.h  transform_system.cpp
examples/: CMakeLists.txt
examples/anax_example/: main.cpp
examples/assets/shaders/: basic_shader.fsh  light_shader.fsh
examples/common/include/: map.h  map_component.h  map_layer.h  position_component.h  rendering_system.h  scenelayer.h  sprite_component.h
examples/common/src/: rendering_system.cpp
examples/early_example/: main.cpp
examples/game/: game.cpp  game.h  main.cpp
examples/game/components/: animation_component.h  body_component.h  game_components.h  input_component.h  movement_component.h  position_component.h
examples/game/systems/: animation_system.cpp  collision_system.cpp  collision_system.h  game_systems.h  lighting_system.cpp  lighting_system.h  movement_system.cpp  parallax_system.h  player_movement_system.cpp  player_movement_system.h  render_system.cpp  render_system.h  tileview_system.cpp
examples/snake/: game.cpp  game.h  main.cpp  snake.cpp  snake.h
examples/snake/components/: animation_component.h  body_component.h  game_components.h  movement_component.h  timer_component.h
examples/snake/systems/: collision_system.cpp  collision_system.h  game_systems.h  movement_system.cpp  parallax_system.cpp  player_movement_system.cpp  tileview_system.cpp
examples/stellar/: game.cpp  game.h  main.cpp
examples/stellar/components/: animation_component.h  body_component.h  game_components.h  movement_component.h  parallax_component.h  particle_component.h  particle_emitter.h  particle_generator.h  spatial_component.h  sprite2_component.h  sprite_component.h  text_component.h  tileview_component.h  transform_component.h
examples/stellar/systems/: animation_system.cpp  animation_system.h  collision_system.cpp  collision_system.h  font_rendering_system.cpp  font_rendering_system.h  game_systems.h  movement_system.cpp  movement_system.h  parallax_system.cpp  parallax_system.h  particle_system.cpp  particle_system.h  player_movement_system.cpp  player_movement_system.h  render_system.cpp  render_system.h  tileview_system.cpp  tileview_system.h  transform_system.cpp
examples/torch/: game.cpp  game.h  main.cpp
examples/torch/components/: body2d_component.h  dimension_component.h  game_components.h  input_component.h  movement_component.h  particle_component.h  particle_emitter.h  player_component.h  position_component.h
examples/torch/events/: collision.h
examples/torch/systems/: animation_system.cpp  animation_system.h  collision_system.cpp  collision_system.h  (+24 more)
examples/worm/: brainstorm.md  game.cpp  game.h  main.cpp  snake.cpp  snake.h
lib/: CMakeLists.txt
lib/entityx/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/lua/: liblua53.dylib
lib/openal-soft-win-64/: OpenAL32.lib
lib/vorbis-win-64/: vorbis.lib  vorbisenc.lib
nikte/: CMakeLists.txt  game.cpp  game.h  game.hpp  main.cpp  player.cpp  player.h  player.hpp
nikte/assets/: assets.json
nikte/dialogue/: README.md  dialogue.py  main.py  npc.py  speech.py
nikte/scenes/: scene1.json
nikte/scripts/: Entity.lua  main.lua
nikte2/: CMakeLists.txt  config.json  game.lua  main.cpp
nikte2/assets/: assets.json
nikte2/scenes/: scene1.json  scene1.lua  scene2.json  scene2.lua  scene3.json  scene3.lua  tuta.json
nikte2/scripts/: main.lua
sandbox/: CMakeLists.txt  display.cpp  main.cpp  player.h  sandbox  sandbox.cpp  sandbox.h  shader.cpp  texture.cpp  texture.h
sandbox/NLP/: CMakeLists.txt  Makefile  lemma_lookup.txt  lemmatizer.cpp  lemmatizer.h  main.cpp  nlp  nlp.cpp  sentence_tokenizer.cpp  sentence_tokenizer.h  string_utils.h  token.h  word_tokenizer.cpp  word_tokenizer.h
sandbox/assets/: basic.vert  lighting.frag  lighting.vert  making_normal.aseprite
sandbox/normal_map/: Makefile  display.cpp  main.cpp  sandbox  shader.cpp  texture.cpp  texture.h  texture.hpp  val_check.txt
sandbox/scripts/: Map.lua  ProceduralMap.lua  main.lua
src/: CMakeLists.txt  stella.h
src/audio/: ogg_stream.cpp  sound.cpp  soundplayer.cpp
src/editor/: CMakeLists.txt  debug_layer.cpp  editor.cpp  editor2.cpp  editor_gui.cpp  inspector.cpp  layer_editor.cpp  map_editor.cpp  project.cpp  scene.cpp  tileset_editor.cpp  toolbar.cpp
src/graphics/: animator.cpp  debug_gui.cpp  display.cpp  display.h  framebuffer.cpp  layer.cpp  renderable.cpp  renderable.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite.cpp  sprite.h  spritesheet.cpp  spritesheet.h  text.cpp  text.h  texture.cpp  texture.h
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl_gl3.cpp
src/sound/: ogg_stream.cpp  ogg_stream.h  sound.cpp  sound.h  soundplayer.cpp  soundplayer.h
src/stella/: CMakeLists.txt  application.cpp  component_list.cpp  game.cpp  game2.cpp  script_api.cpp
src/utils/: fileutils.h  timer.h
test/: CMakeLists.txt
test/stella/: graphics.cpp  grid.cpp
(+1343 files in other folders)
